updating scroll and links
fix pugs

--- a/leon.html
+++ b/leon.html
@@ -27,10 +27,10 @@
                 </div>
     <div class="links">
         <ul>
-            <li>services</li>
-            <li>portfolio</li>
-            <li>about</li>
-            <li>contact us</li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#contact us">contact us</a></li>
         </ul>
     </div>
 </div>
@@ -67,7 +67,7 @@
     </div>
     <!-- end section -->
     <!-- start services -->
-    <div class="serv">
+    <div class="serv" id="services">
         <div class="main-header">
             <h1>services</h1>
             <p>do not be busy,be productive</p>
@@ -97,7 +97,7 @@
     </div>
     <!-- end services -->
     <!-- start portfolio -->
-    <div class="portofilo">
+    <div class="portofilo" id="portfolio">
         <div class="main-header">
             <h1>portofilo</h1>
             <p>if you do it light,it will last forever</p>
@@ -128,7 +128,7 @@
     </div>
     <!-- end portfolio -->
     <!-- start about -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="main-header">
             <h1>about</h1>
             <p>less is more work</p>
@@ -142,8 +142,8 @@
         </div>
     </div>
     <!-- end about -->
-    <!-- start contactus -->
-    <div class="contact">
+    <!-- start contact us -->
+    <div class="contact" id="contact us">
         <div class="main-header">
             <h1>contact us</h1>
             <p>we are born to create</p>
@@ -158,7 +158,7 @@
     </address>
 </div>
     </div>
-    <!-- end contactus -->
+    <!-- end contact us -->
     <!-- start footer -->
     <div class="footer">
         <p><i class="fa-sharp fa-regular fa-copyright"></i>2024-<b>mahmoud</b>,all right reserved</p>
